--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/docs/swagger-ui.html
 
-spring.datasource.url=jdbc:mysql://localhost:3306/examenFinal
+spring.datasource.url=jdbc:mysql://localhost:3306/examen_final
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8081 
